--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,8 +32,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ghcr.io/grayplex/varken
-            grayplex/varken
+            ghcr.io/navino16/varken
+            navino16/varken
           flavor: |
             latest=true
           tags: |
@@ -54,7 +54,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.CR_GRAYPLEX }}
+          password: ${{ secrets.CR_navino16 }}
       
       - name: Login to Docker Hub
         uses: docker/login-action@v2
